@@ -4,7 +4,7 @@
     "description": "Welcome PM for registration and activation",
     "homepage": "http://phpbbguru.net",
     "version": "1.1.0",
-    "time": "2020-06-30",
+    "time": "2020-07-01",
     "license": "GPL-2.0-only",
     "authors": [
         {
