@@ -19,12 +19,12 @@ if (empty($lang) || !is_array($lang))
 
 $lang = array_merge($lang, array(
 	'ACP_PMWELCOME'					=> 'Welcome message',
-	'ACP_PMWELCOME_EXPLAIN'			=> 'You can specify the text of the personal message that will be sent to the user upon registration.',
+	'ACP_PMWELCOME_EXPLAIN'			=> 'You can specify the text of the personal message that will be sent to the user upon activation or registration.',
 	'ACP_PMWELCOME_SETTINGS'		=> 'Welcome message settings',
 	'ACP_PMWELCOME_USER'			=> 'Sender',
 	'ACP_PMWELCOME_USER_EXPLAIN'	=> 'User ID of the member on whose\'s behalf the message will be sent.',
 	'ACP_PMWELCOME_SUBJECT'			=> 'Post subject',
-	'ACP_PMWELCOME_TEXT'			=> 'Text of the greeting message',
+	'ACP_PMWELCOME_TEXT'			=> 'Text of the welcome message',
 	'ACP_PMWELCOME_TEXT_EXPLAIN'	=> 'You can use bbcode, smilies and the following tokens:<br>
 										{USERNAME} to replace the name of the user who is to receive the private message,
 										{SITE_NAME} to display your boards name (URL),
